--- a/Redes Neuronales/Introducción/Perceptrón y perceptrón multi-capa.ipynb
+++ b/Redes Neuronales/Introducción/Perceptrón y perceptrón multi-capa.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4       3450.0  Female  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "5       0      0          1  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -342,17 +342,17 @@
       "Data columns (total 9 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   species            333 non-null    int64  \n",
+      " 0   species            333 non-null    int32  \n",
       " 1   bill_length_mm     333 non-null    float64\n",
       " 2   bill_depth_mm      333 non-null    float64\n",
       " 3   flipper_length_mm  333 non-null    float64\n",
       " 4   body_mass_g        333 non-null    float64\n",
-      " 5   sex                333 non-null    int64  \n",
-      " 6   Biscoe             333 non-null    int64  \n",
-      " 7   Dream              333 non-null    int64  \n",
-      " 8   Torgersen          333 non-null    int64  \n",
-      "dtypes: float64(4), int64(5)\n",
-      "memory usage: 26.0 KB\n"
+      " 5   sex                333 non-null    int32  \n",
+      " 6   Biscoe             333 non-null    int32  \n",
+      " 7   Dream              333 non-null    int32  \n",
+      " 8   Torgersen          333 non-null    int32  \n",
+      "dtypes: float64(4), int32(5)\n",
+      "memory usage: 19.5 KB\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "max    6300.000000    1.000000    1.000000    1.000000    1.000000  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "0.19402985074626866"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "1.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "0.43283582089552236"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "0.4626865671641791"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -815,10 +815,10 @@
       "text/plain": [
        "array([[31,  0,  0],\n",
        "       [ 0, 13,  0],\n",
-       "       [ 0,  0, 23]])"
+       "       [ 0,  0, 23]], dtype=int64)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
